--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-elements": "^2.0.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-router-native": "^5.1.2"
   },
   "devDependencies": {
