--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.3.1",
     "react-native": "^0.55.4",
     "react-native-elements": "^2.0.0",
+    "react-native-image-crop-picker": "^0.24.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^6.0.1",
     "react-router-native": "^5.1.2",
