--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^2.0.0",
     "react-native-image-crop-picker": "^0.24.0",
+    "react-native-picker": "^4.3.7",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^6.0.1",
     "react-router-native": "^5.1.2",
