upload file image

--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "1.17.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "4.15.3",
     "express-jwt": "^5.3.3",
+    "formidable": "^1.2.2",
     "method-override": "2.3.9",
     "mongoose": "4.11.5",
     "mongoose-float": "^1.0.4",
