--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,7 +99,7 @@ android {
 
     defaultConfig {
         applicationId "com.emptyproject"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -138,7 +138,8 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-picker')
+    compile project(':react-native-community-async-storage')
+    compile project(':react-native-wheel-picker-android')
     compile project(':react-native-image-crop-picker')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
