--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "4.15.3",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-jwt": "^5.3.3",
     "formidable": "^1.2.2",
     "method-override": "2.3.9",
