--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,11 @@
   "author": "Ivan Vasiljevic",
   "license": "MIT",
   "devDependencies": {
+    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-node": "5.1.1",
     "gulp": "~3.9.1",
     "gulp-eslint": "4.0.0",
-    "gulp-nodemon": "^2.2.1",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-node": "5.1.1"
+    "gulp-nodemon": "^2.2.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,7 +22,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "4.15.3",
-    "express-fileupload": "^1.1.7-alpha.3",
     "express-jwt": "^5.3.3",
     "formidable": "^1.2.2",
     "method-override": "2.3.9",
