--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.28",
     "react": "16.3.1",
     "react-native": "^0.55.4",
     "react-native-datepicker": "^1.7.2",
