--- a/server/package.json
+++ b/server/package.json
@@ -17,18 +17,25 @@
     "gulp-nodemon": "^2.2.1"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "1.17.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^8.2.0",
-    "express": "4.15.3",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-jwt": "^5.3.3",
+    "form-data": "^3.0.0",
     "formidable": "^1.2.2",
     "method-override": "2.3.9",
     "mongoose": "4.11.5",
     "mongoose-float": "^1.0.4",
+    "muller": "^1.1.0",
     "multer": "^1.4.2",
-    "swagger-ui-express": "2.0.6"
+    "request": "^2.88.2",
+    "swagger-ui-express": "2.0.6",
+    "uuid": "^8.1.0"
   },
   "engines": {
     "node": ">=6.11.0"
