--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 HOST="localhost:3000"
-URL_DB_MONGO="mongodb://127.0.0.1:27017"
+URL_DB_MONGO="mongodb://127.0.0.1:27017/app"
 SECRET="123456789"
 PROJECT_ID="deft-beanbag-272609"
 BUCKET_NAME="avatars-mobileapp2020"
