--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
-HOST="localhost:3000"
+HOST="http://localhost:3000"
 URL_DB_MONGO="mongodb://127.0.0.1:27017/app"
 SECRET="123456789"
 PROJECT_ID="deft-beanbag-272609"
 BUCKET_NAME="avatars-mobileapp2020"
-CONFIG_GOOGLE_SERVICE="deft-beanbag-272609-68b5c99dbefa.json"
+CONFIG_GOOGLE_SERVICE="bucket.json"
+BUCKET_LOCATION="us-central1"
