--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,10 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.0.1",
+    "@google-cloud/vision": "^2.0.0",
+    "@tensorflow/tfjs": "^2.0.0",
+    "@tensorflow/tfjs-automl": "^1.0.0",
+    "@tensorflow/tfjs-node": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -33,6 +37,7 @@
     "mongoose-float": "^1.0.4",
     "muller": "^1.1.0",
     "multer": "^1.4.2",
+    "pureimage": "^0.2.1",
     "request": "^2.88.2",
     "swagger-ui-express": "2.0.6",
     "uuid": "^8.1.0"
