--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
 HOST="http://localhost:3000"
-URL_DB_MONGO="mongodb://127.0.0.1:27017/app"
+URL_DB_MONGO="mongodb://face-api-2020:face-api-2020@ds027908.mlab.com:27908/face-api-2020"
 SECRET="123456789"
 PROJECT_ID="deft-beanbag-272609"
 BUCKET_NAME="avatars-mobileapp2020"
 CONFIG_GOOGLE_SERVICE="bucket.json"
 BUCKET_LOCATION="us-central1"
+PORT=3000
