--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-node": "5.1.1",
+    "express-swagger-generator": "^1.1.17",
     "gulp": "~3.9.1",
     "gulp-eslint": "4.0.0",
     "gulp-nodemon": "^2.2.1"
@@ -39,7 +40,8 @@
     "multer": "^1.4.2",
     "pureimage": "^0.2.1",
     "request": "^2.88.2",
-    "swagger-ui-express": "2.0.6",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^2.0.6",
     "uuid": "^8.1.0"
   },
   "engines": {
