--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "mongoose-float": "^1.0.4",
     "muller": "^1.1.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.8",
     "pureimage": "^0.2.1",
     "request": "^2.88.2",
     "swagger-jsdoc": "^4.0.0",
