--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: always
     command: npm start
     volumes:
+      - /logs/:/logs/
       - .:/usr/app/
       - /usr/app/node_modules
     ports:
