--- a/server/package.json
+++ b/server/package.json
@@ -42,8 +42,11 @@
     "nodemailer": "^6.4.8",
     "pureimage": "^0.2.1",
     "request": "^2.88.2",
+    "set-tz": "^0.2.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^2.0.6",
+    "time": "^0.12.0",
+    "tzdata": "^1.0.19",
     "uuid": "^8.1.0",
     "winston": "^3.2.1"
   },
