fix env and author session

--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "muller": "^1.1.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
+    "properties-reader": "^2.0.0",
     "pureimage": "^0.2.1",
     "request": "^2.88.2",
     "set-tz": "^0.2.0",
