--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   app:
     image: node-server
-    container_name: node-ser
+    container_name: node-server
     build: .
     restart: always
     command: npm start
