--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^2.0.0",
     "react-native-image-crop-picker": "^0.24.0",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-wheel-picker-android": "^2.0.6",
     "react-redux": "^6.0.1",
