--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,8 +2,9 @@
     FROM node:10
     WORKDIR /app  
     COPY package.json /app  
-    ENV ENV_NODE "product" GOOGLE_APPLICATION_CREDENTIALS "/app/resource/detect-faces.json"
+    ENV  GOOGLE_APPLICATION_CREDENTIALS "/app/resource/detect-faces.json"
+    ENV  ENV_NODE "product"
     RUN npm install  
     COPY . /app  
     EXPOSE 3000  
-    CMD npm start
+    CMD  npm start
