--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,10 @@
     "@google-cloud/vision": "^2.0.0",
     "@tensorflow/tfjs": "^2.0.0",
     "@tensorflow/tfjs-automl": "^1.0.0",
-    "@tensorflow/tfjs-node": "^1.2.11",
+    "@tensorflow/tfjs-node": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "canvas": "^2.6.1",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "dotenv": "^8.2.0",
