--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Ivan Vasiljevic",
   "license": "MIT",
   "devDependencies": {
+    "compress-images": "^1.7.8",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-node": "5.1.1",
     "express-swagger-generator": "^1.1.17",
@@ -41,6 +42,7 @@
     "muller": "^1.1.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
+    "pngquant-bin": "^6.0.0",
     "properties-reader": "^2.0.0",
     "pureimage": "^0.2.1",
     "request": "^2.88.2",
